# ChatGPT-weBot

./: .gitattributes  .gitignore  .gitmodules  .submodules  Dockerfile  Preview.md  Readme.md  Readme_ZH.md  dual-start.bat  main.py  requirements.txt
.config/: api_config.json  config.json  oth_config.json  rev_config.json  sys_character.json
apibase/: ChatGPTAPI.py  revChatGPT.py
basic/: action.py  get.py  send.py  task.py
client/: handle.py  httpclient.py  wxclient.py
doc/: Config.md  Config_ZH.md  Preview.md
multithread/: threads.py
revChat/: revChatGPT.py
services/: ChatGPTAPI.py  model.py
services/chat/: ChatGPTAPI.py
services/draw/: ImageGenerator.py  LatentConsistency.py  StableDiffusionXL.py
shared/: config.py  server.py  shared.py  signal.py
src/test/: client.py
wxinject/: CMakeLists.txt  Readme.md
wxinject/src/: config.cc  hooks.cc  hooks.h  http_server_callback.cc  http_server_callback.h  manager.cc  tinyxml2.cpp  wechat_function.h
